--- a/resources/site/index.html
+++ b/resources/site/index.html
@@ -73,6 +73,9 @@
                         <a href="#download">Download</a>
                     </li>
                     <li>
+                        <a href="#sourceCodeRepository">Source code repository</a>
+                    </li>
+                    <li>
                         <a href="#license">License</a>
                     </li>
                     <li>
@@ -421,17 +424,23 @@
                     </ul>
                 </p>
 
+                <h2 id="sourceCodeRepository">Source code repository</h2>
+                <p>
+                    The full source code can be checked out from
+                    <a href="{{REPOSITORY_URL}}"> {{REPOSITORY_URL}}</a>.
+                </a>
+                </p>
+
                 <h2 id="license">License</h2>
                 <p>
                     Yellow code is licensed under the
-                    <a href="http://en.wikipedia.org/wiki/BSD_licenses#2-clause_license_.28.22Simplified_BSD_License.22_or_.22FreeBSD_License.22.29">
-                    2-clause BSD licence</a>.
+                    <a href="{{LICENSE_URL}}">{{LICENSE_NAME}}</a>.
                 </p>
 
                 <h2 id="contact">Contact</h2>
                 <p>
                     If you have any questions, comments, or suggestions, please send
-                    us an email to <a href="mailto: ylc@any3w.com">ylc@any3w.com</a>.
+                    us an email to <a href="mailto: {{EMAIL}}">{{EMAIL}}</a>.
                 </p>
 
             </div>
