Minor website update.

--- a/resources/site/index.html
+++ b/resources/site/index.html
@@ -420,7 +420,7 @@
                 <p>
                     <ul>
                         <li><a href="yellowCode.min.js" download>download minified</a></li>
-                        <li><a href="yellowCode.js" download>download source</a></li>
+                        <li><a href="yellowCode.js" download>download full size</a></li>
                     </ul>
                 </p>
 
