--- a/resources/test/035_errors_in_expressions.html
+++ b/resources/test/035_errors_in_expressions.html
@@ -82,23 +82,23 @@
             }
         };
 
-        $("#addition").yellowCode(controller);
-        $("#multiplication").yellowCode(controller);
-        $("#navigation").yellowCode(controller);
-        $("#nullNavigation").yellowCode(controller);
-        $("#adHocNavigation").yellowCode(controller);
-        $("#adHocNullNavigation").yellowCode(controller);
-        $("#arrayAccess").yellowCode(controller);
-        $("#comparison").yellowCode(controller);
-        $("#comparisonLess").yellowCode(controller);
-        $("#comparisonDefaults").yellowCode(controller);
-        $("#comparisonDefaultsLess").yellowCode(controller);
-        $("#comparisonDefaultsGreater").yellowCode(controller);
-        $("#nonObjectMember").yellowCode(controller);
-        $("#nonObjectMemberWrite").yellowCode(controller);
-        $("#nonArrayElement").yellowCode(controller);
-        $("#nonArrayElementWrite").yellowCode(controller);
-        $("#not").yellowCode(controller);
+        try {$("#addition").yellowCode(controller);} catch (err) {}
+        try {$("#multiplication").yellowCode(controller);} catch (err) {}
+        try {$("#navigation").yellowCode(controller);} catch (err) {}
+        try {$("#nullNavigation").yellowCode(controller);} catch (err) {}
+        try {$("#adHocNavigation").yellowCode(controller);} catch (err) {}
+        try {$("#adHocNullNavigation").yellowCode(controller);} catch (err) {}
+        try {$("#arrayAccess").yellowCode(controller);} catch (err) {}
+        try {$("#comparison").yellowCode(controller);} catch (err) {}
+        try {$("#comparisonLess").yellowCode(controller);} catch (err) {}
+        try {$("#comparisonDefaults").yellowCode(controller);} catch (err) {}
+        try {$("#comparisonDefaultsLess").yellowCode(controller);} catch (err) {}
+        try {$("#comparisonDefaultsGreater").yellowCode(controller);} catch (err) {}
+        try {$("#nonObjectMember").yellowCode(controller);} catch (err) {}
+        try {$("#nonObjectMemberWrite").yellowCode(controller);} catch (err) {}
+        try {$("#nonArrayElement").yellowCode(controller);} catch (err) {}
+        try {$("#nonArrayElementWrite").yellowCode(controller);} catch (err) {}
+        try {$("#not").yellowCode(controller);} catch (err) {}
 
     </script>
 
