Recognizing "beforeEvent" amd "afterEvent" annotations.

--- a/resources/test/038_subtreeRoot.html
+++ b/resources/test/038_subtreeRoot.html
@@ -58,7 +58,20 @@
                     idxRight -= 1;
                 }
                 console.log(model);
+            },
+
+            "beforeEvent": {
+                beforeEventHandler: function () {
+                    console.log("beforeEventHandler");
+                }
+            },
+
+            "afterEvent": {
+                afterEventHandler: function () {
+                    console.log("beforeEventHandler");
+                }
             }
+
         };
 
         $("#colors").yellowCode(controller);
