--- a/resources/test/043_testM2vOnlyAnnotation.html
+++ b/resources/test/043_testM2vOnlyAnnotation.html
@@ -34,7 +34,7 @@
                 console.log(model.content1);
             },
 
-            "m2vOnly": {
+            "@M2vOnly": {
                 printContent2: function (model) {
                     console.log(model.content2);
                 }
