converting manual tests to automated

--- a/test/test.html
+++ b/test/test.html
@@ -8,6 +8,9 @@
     </style>
 </head>
 <body>
+    <script>
+        window.setUpTapeDom = true;
+    </script>
     <script src="dest/all.js"></script>
 </body>
 </html>
