removing the mechanism of invisible templates

--- a/test/src/ui/deletingElements.html
+++ b/test/src/ui/deletingElements.html
@@ -1,5 +1,5 @@
 <div>
-    <ul data-ylcLoop="element,status: list" class="ylcInvisibleTemplate">
+    <ul data-ylcLoop="element,status: list">
         <li>
             <a data-ylcBind="text: element.name"
                href="#"
