--- a/test/src/ui/subtreeRoot.html
+++ b/test/src/ui/subtreeRoot.html
@@ -1,8 +1,7 @@
 <div>
 
-    <div id="colorWidgetHtml">
-        <div class="ylcInvisibleTemplate"
-             style="width: 500px; min-height: 30px; border: 1px solid; margin: 10px; padding: 10px">
+    <div id="colorWidgetHtml" style="display: none">
+        <div style="width: 500px; min-height: 30px; border: 1px solid; margin: 10px; padding: 10px">
 
             <div>
                 <strong>current color:</strong>
