--- a/test/src/ui/updatingModel.html
+++ b/test/src/ui/updatingModel.html
@@ -1,4 +1,4 @@
-<div class="ylcInvisibleTemplate">
+<div>
     <button data-ylcEvents="click: addElement">Add element</button>
     <ul data-ylcLoop="element: listOfElements">
         <li data-ylcBind="text: element.text">Some dynamic element...</li>
