--- a/test/src/ui/ylcEvents.html
+++ b/test/src/ui/ylcEvents.html
@@ -1,6 +1,6 @@
 <div>
     <button data-ylcEvents="click: addElement" id="bAdd">+</button><br />
-    <div data-ylcLoop="dynamicInput,dynamicInputStatus: dynamicInputs" class="ylcInvisibleTemplate">
+    <div data-ylcLoop="dynamicInput,dynamicInputStatus: dynamicInputs">
         <input
                 data-ylcBind="val: dynamicInput.value"
                 data-ylcEvents="ylcElementInitialized: installPlugin" />
