--- a/test/src/ui/dynamicInput.html
+++ b/test/src/ui/dynamicInput.html
@@ -1,4 +1,4 @@
-<div class="ylcInvisibleTemplate">
+<div>
     <button id="addElement" data-ylcEvents="click: addElement">Add element</button>
     <ul>
         <li data-ylcLoop="dynamicInput: dynamicInputs">
