--- a/test/src/ui/freeTextArray.html
+++ b/test/src/ui/freeTextArray.html
@@ -1,5 +1,5 @@
 <div>
-    <ul data-ylcLoop="string: strings" class="ylcInvisibleTemplate">
+    <ul data-ylcLoop="string: strings">
         <li data-ylcBind="text: string">Some child</li>
     </ul>
 </div>
