--- a/test/src/ui/if.html
+++ b/test/src/ui/if.html
@@ -4,7 +4,7 @@
         <p>Unconditioned.</p>
     </div>
     <button data-ylcEvents="click: flip">Flip</button>
-    <div data-ylcIf="condition" class="ylcInvisibleTemplate">
+    <div data-ylcIf="condition">
         <p>Conditioned.</p>
     </div>
     <button data-ylcEvents="click: flip">Flip</button>
