move information from data-ylc* elements into jQuery data

--- a/resources/site/examples/basic_example.html
+++ b/resources/site/examples/basic_example.html
@@ -4,15 +4,12 @@
     <script src="//code.jquery.com/jquery-1.11.1.min.js"></script>
     <script src="../yellowCode.min.js"></script>
 
-    <style>
-        .ylcInvisibleTemplate {display: none;}
-    </style>
 </head>
 
 <body>
 
 <h1>Basic example</h1>
-<div id="dynamicList" class="ylcInvisibleTemplate">
+<div id="dynamicList">
     <button data-ylcEvents="click: addElement">Add element</button>
     <p data-ylcBind="text: greeting">Some greeting...</p>
     <ul>
