--- a/resources/test/007_dynamicInput.html
+++ b/resources/test/007_dynamicInput.html
@@ -6,14 +6,11 @@
     <script src="//code.jquery.com/jquery-1.11.1.min.js"></script>
     <script src="yellowCode.min.js"></script>
 
-    <style>
-        .ylcInvisibleTemplate {display: none;}
-    </style>
 </head>
 
 <body>
     <h1>Dynamic input</h1>
-    <div id="form" class="ylcInvisibleTemplate">
+    <div id="form">
         <button data-ylcEvents="click: addElement">Add element</button>
         <ul>
             <li data-ylcLoop="dynamicInput: dynamicInputs">
