--- a/resources/test/011_eventAttributes.html
+++ b/resources/test/011_eventAttributes.html
@@ -6,17 +6,13 @@
     <script src="//code.jquery.com/jquery-1.11.1.min.js"></script>
     <script src="yellowCode.min.js"></script>
 
-    <style>
-        .ylcInvisibleTemplate {display: none;}
-    </style>
-
 </head>
 
 <body>
 
     <h1>Event attributes</h1>
     <div id="eventAttributes">
-        <ul data-ylcLoop="element,status: list" class="ylcInvisibleTemplate">
+        <ul data-ylcLoop="element,status: list">
             <li>
                 <a
                     data-ylcBind="text: element.name"
