--- a/resources/test/017_errors.html
+++ b/resources/test/017_errors.html
@@ -7,10 +7,6 @@
     <script src="//code.jquery.com/jquery-1.11.1.min.js"></script>
     <script src="yellowCode.min.js"></script>
 
-    <style>
-        .ylcInvisibleTemplate {display: none;}
-    </style>
-
 </head>
 
 <body>
@@ -29,7 +25,7 @@
 
 <div id="nonexistentModelList">
     <h2>Nonexistent model list</h2>
-    <p data-ylcLoop="item: list" class="ylcInvisibleTemplate">
+    <p data-ylcLoop="item: list">
         item: <span data-ylcBind="text: item">Some child</span>
     </p>
 </div>
@@ -72,9 +68,9 @@
 <div id="iterationStatusUsed">
     <h2>Iteration status used</h2>
 
-    <div data-ylcLoop="sublist,status: multilevelList" class="ylcInvisibleTemplate">
+    <div data-ylcLoop="sublist,status: multilevelList">
         <div>
-            <div data-ylcLoop="nestedItem,status: sublist" class="ylcInvisibleTemplate">
+            <div data-ylcLoop="nestedItem,status: sublist">
                 <p data-ylcBind="text: nestedItem"></p>
             </div>
         </div>
@@ -84,9 +80,9 @@
 <div id="iterationVariableUsed">
     <h2>Iteration variable used</h2>
 
-    <div data-ylcLoop="sublist,status1: multilevelList" class="ylcInvisibleTemplate">
+    <div data-ylcLoop="sublist,status1: multilevelList">
         <div>
-            <div data-ylcLoop="sublist,status2: sublist" class="ylcInvisibleTemplate">
+            <div data-ylcLoop="sublist,status2: sublist">
             </div>
         </div>
     </div>
@@ -95,7 +91,7 @@
 <div id="iterationVariableNotArray">
     <h2>Iteration variable not array</h2>
 
-    <div data-ylcLoop="item: notAList" class="ylcInvisibleTemplate">
+    <div data-ylcLoop="item: notAList">
     </div>
 </div>
 
