--- a/resources/test/019_loopAtRoot.html
+++ b/resources/test/019_loopAtRoot.html
@@ -6,16 +6,12 @@
     <script src="//code.jquery.com/jquery-1.11.1.min.js"></script>
     <script src="yellowCode.min.js"></script>
 
-    <style>
-        .ylcInvisibleTemplate {display: none;}
-    </style>
-
 </head>
 
 <body>
 
 <h1>Loop at root</h1>
-<div class="loopAtRoot ylcInvisibleTemplate" data-ylcLoop="item: list">
+<div class="loopAtRoot" data-ylcLoop="item: list">
     <span data-ylcBind="text: item"></span><br />
 </div>
 
