--- a/resources/test/020_loopAtRootWithInputs.html
+++ b/resources/test/020_loopAtRootWithInputs.html
@@ -6,17 +6,13 @@
     <script src="//code.jquery.com/jquery-1.11.1.min.js"></script>
     <script src="yellowCode.min.js"></script>
 
-    <style>
-        .ylcInvisibleTemplate {display: none;}
-    </style>
-
 </head>
 
 <body>
 
 <h1>Loop at root</h1>
 
-<div class="loopAtRoot ylcInvisibleTemplate" data-ylcLoop="item,status: list">
+<div class="loopAtRoot" data-ylcLoop="item,status: list">
     <input data-ylcBind="val: item" data-ylcEvents="keyup: printThem"></div>
 </div>
 
