--- a/resources/test/021_if.html
+++ b/resources/test/021_if.html
@@ -7,10 +7,6 @@
     <script src="//code.jquery.com/jquery-1.11.1.min.js"></script>
     <script src="yellowCode.min.js"></script>
 
-    <style>
-        .ylcInvisibleTemplate {display: none;}
-    </style>
-
 </head>
 
 <body>
@@ -22,7 +18,7 @@
         <p>Unconditioned.</p>
     </div>
     <button data-ylcEvents="click: flip">Flip</button>
-    <div data-ylcIf="condition" class="ylcInvisibleTemplate">
+    <div data-ylcIf="condition">
         <p>Conditioned.</p>
     </div>
     <button data-ylcEvents="click: flip">Flip</button>
