--- a/resources/test/015_freeTextArray.html
+++ b/resources/test/015_freeTextArray.html
@@ -6,17 +6,13 @@
     <script src="//code.jquery.com/jquery-1.11.1.min.js"></script>
     <script src="yellowCode.min.js"></script>
 
-    <style>
-        .ylcInvisibleTemplate {display: none;}
-    </style>
-
 </head>
 
 <body>
 
 <h1>Free text array</h1>
 <div id="groupOfDynamicChildren">
-    <ul data-ylcLoop="string: strings" class="ylcInvisibleTemplate">
+    <ul data-ylcLoop="string: strings">
         <li data-ylcBind="text: string">Some child</li>
     </ul>
 </div>
