--- a/resources/test/038_subtreeRoot.html
+++ b/resources/test/038_subtreeRoot.html
@@ -6,9 +6,6 @@
     <script src="//code.jquery.com/jquery-1.11.1.min.js"></script>
     <script src="yellowCode.min.js"></script>
 
-    <style>
-        .ylcInvisibleTemplate {display: none !important;}
-    </style>
 </head>
 
 <body>
@@ -16,16 +13,13 @@
     <!-- inner widget definition -->
 
     <div id="colorWidgetHtml">
-        <div
-             class="ylcInvisibleTemplate"
-             style="width: 500px; min-height: 30px; border: 1px solid; margin: 10px; padding: 10px">
+        <div style="width: 500px; min-height: 30px; border: 1px solid; margin: 10px; padding: 10px">
 
             <div>
                 <strong>current color:</strong>
-                <div
-                        style="width: 40px; height: 20px; border: 2px solid; margin-left: auto; margin-right: auto; display: inline-block; vertical-align: middle;"
-                        data-ylcBind="css.background-color: currentColor"
-                        data-ylcEvents="click: enableEdit">
+                <div style="width: 40px; height: 20px; border: 2px solid; margin-left: auto; margin-right: auto; display: inline-block; vertical-align: middle;"
+                     data-ylcBind="css.background-color: currentColor"
+                     data-ylcEvents="click: enableEdit">
                 </div>
             </div>
 
