--- a/test/src/ui/asyncModelUpdate.html
+++ b/test/src/ui/asyncModelUpdate.html
@@ -1,4 +1,4 @@
-<div>
+<div id="asyncModelUpdateTest">
     <p>data: <span data-ylcBind="text: variable"></span></p>
     <button data-ylcEvents="click: callAjax">Get value!</button>
 </div>
