recognizing i18n moustache syntax

--- a/test/src/ui/moustache.html
+++ b/test/src/ui/moustache.html
@@ -1,4 +1,5 @@
 <div>
     <span id="spanWithMoustache" style="color: {{color}}">Hello {{addressee}}, my name is {{myName}}!</span>
     <span id="mixedContentsWithoutMoustache">123<b>456</b>789</span>
+    <span id="i18n">@{{dashboard.messages.numberOfRecordsParagraph, addressee, numberOfRecords}}</span>
 </div>
