Introducing data-ylcElementInit

--- a/test/src/ui/ylcElementInitializedListChange.html
+++ b/test/src/ui/ylcElementInitializedListChange.html
@@ -1,4 +1,4 @@
 <div>
-    <span data-ylcLoop="element: list" data-ylcEvents="ylcElementInitialized: onElementInit">
+    <span data-ylcLoop="element: list" data-ylcElementInit="onElementInit">
     </span>
 </div>
