make V2M synchronization before calling an adapter or public API method

--- a/test/src/ui/multipleExternalEvents.html
+++ b/test/src/ui/multipleExternalEvents.html
@@ -1,5 +1,5 @@
 <ul>
-    <li>variable 1: <span data-ylcBind="text: variable1"></span></li>
-    <li>variable 2: <span data-ylcBind="text: variable2"></span></li>
-    <li>variable 3: <span data-ylcBind="text: variable3"></span></li>
+    <li>variable 1: <span data-ylcBind="text: submodel#variable1"></span></li>
+    <li>variable 2: <span data-ylcBind="text: submodel#variable2"></span></li>
+    <li>variable 3: <span data-ylcBind="text: submodel#variable3"></span></li>
 </ul>
